--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
