--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "axios": "^1.5.0",
     "formik": "^2.4.4",
     "react": "^18.1.0",
@@ -19,6 +21,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.10",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
   },
